@@ -1,4 +1,5 @@
 2009/02/05:
+	- packaging improvements (platform independant)
 	- added CADViewer to /Tools directory
 	- improved portability (removed OCC_BUILD_PATH)
 2009/02/02:
